[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/HealthBarTexture.png" type="Texture" id=1]
[ext_resource path="res://UI/Stats.gd" type="Script" id=2]

[node name="Stats" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 64.0
margin_bottom = 16.0

[node name="HealthBar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
visible = false
margin_right = 64.0
margin_bottom = 16.0
value = 90.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarTimer" type="Timer" parent="MarginContainer/HBoxContainer/HealthBar"]
one_shot = true
[connection signal="timeout" from="MarginContainer/HBoxContainer/HealthBar/HealthBarTimer" to="." method="_on_HealthBarTimer_timeout"]
